# voskhttp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: wheel.yml
voskhttp/: __main__.py  server.py
