[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voskhttp"
version = "1.0.0"
authors = [
    { name = "Thomas Leyh", email = "thomas.leyh@mailbox.org" },
]
description = "Just a very simple HTTP Server wrapper around vosk-api"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["cffi>=1.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/leyhline/voskhttp"
Issues = "https://github.com/leyhline/voskhttp/issues"

[project.scripts]
voskhttp = "server:run"

[tool.setuptools.packages.find]
include = ["voskhttp", "voskhttp.models"]

[tool.setuptools.package-data]
voskhttp = ["*.dll", "*.so"]
